--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <div class="container">
 	<div class="card">
-		<div class="card-body">
+		<div class="card-body"> 
 			<p><span class="text-primary"><b>Miguelaka95 Repo</span></b> is a Cydia repository template.</p>
-			<a class="btn btn-sm btn-primary" href="cydia://url/https://miguelaka95.github.io/repo">Add to Cydia</a>
+			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://miguelaka95.github.io/repo">Add to Cydia</a>
 		</div>
 	</div>
 </div>
